--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1587,6 +1587,20 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+@media (max-width: 480px) {
+  .container {
+    padding: 0!important;
+    margin-top:0;
+    }
+    .panel{
+      margin-top:0!important;
+    }
+  }
+@media (max-width: 767px) {
+    .panel{
+      margin-top:0!important;
+    }
+  }
 @media (min-width: 768px) {
   .container {
     width: 750px;
