--- a/public/css/style.css
+++ b/public/css/style.css
@@ -193,14 +193,14 @@ h4{
   right: 0px; }
 
 
-  th{
+  .table th{
     font-size: 15px;
     font-weight: normal;
     background-color: #4CAF50;
     color: white;
 
   }
-  td{
+ .table td{
     font-size: 15px;
   }
 
